page movimentations resume
